--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(assets/background.jpg);
+    background-image: url(assets/background-light.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -21,7 +21,7 @@ body {
 
 .container h1 {
     font-size: 4rem;
-    background: linear-gradient(90deg, rgb(171, 82, 9) 0%, rgba(207,159,14,1) 51%, rgb(168, 66, 2) 100%);
+    background: linear-gradient(90deg, rgb(25, 25, 25) 0%, rgb(35, 35, 35) 51%, rgb(53, 53, 53) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -38,7 +38,7 @@ body {
     text-align: center;
     border: none;
     font-size: 16px;
-    background-color: orange;
+    background-color: rgba(57, 57, 57, 0.7);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 .container input::placeholder {
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -58,12 +58,11 @@ body {
     margin-top: 5rem;
     height: 3rem;
     padding: 18px 30px;
-    border: none;
-    color: rgb(0, 0, 0);
-    background-color: rgb(189, 134, 13);
+    color: rgb(255, 255, 255);
+    background-color: rgba(25, 25, 25, 1);
     font-size: large;
     line-height: 0.6;
-    
+    border: none;
 }
 
 .container #themeBtn {
@@ -73,9 +72,10 @@ body {
 
 
 .container button:hover {
-   background-color: rgb(22, 124, 27) ;
-   color: rgb(0, 255, 89);
+   background-color: rgb(176, 176, 176) ;
+   color: rgb(0, 0, 0);
    transition: 0.2s ease-out;
+   cursor: pointer;
 }
 
 #results {
@@ -91,7 +91,7 @@ body {
 }
 
 .recipe-card {
-    background: rgb(189, 134, 13);
+    background: rgba(57, 57, 57, 0.7);
     padding: 1rem;
     border-radius: 10px;
     text-align: center;
@@ -126,8 +126,8 @@ body {
 
 .recipe-card a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    background: rgb(177, 112, 7);
+    color: rgb(255, 255, 255);
+    background: rgba(0, 0, 0, 1);
     padding: 8px 12px;
     border-radius: 5px;
     display: inline-block;
@@ -137,7 +137,8 @@ body {
 }
 
 .recipe-card a:hover {
-    background: rgb(230, 189, 27);
+    background: rgba(164, 164, 164);
+    color: black;
 }
 
 
@@ -153,6 +154,11 @@ body {
     margin: 0 10px;
     font-size: 24px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(0, 0, 0);
+  }
+
+  .dark-mode .theme-switch-wrapper span {
+    color: white;
   }
   
   .theme-switch {
@@ -175,7 +181,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #d88612;
+    background-color: rgba(0, 0, 0, 0.7);
     transition: .4s;
   }
   
@@ -186,12 +192,12 @@ body {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(132, 130, 130);
     transition: .4s;
   }
   
   input:checked + .slider {
-    background-color: #21f364;
+    background-color: rgb(255, 255, 255);
   }
   
   input:focus + .slider {
@@ -210,37 +216,47 @@ body {
     border-radius: 50%;
   }
 
+  .dark-mode {
+    background-image: url(assets/background-dark.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
   .dark-mode .container h1 {
-    background: linear-gradient(90deg, rgb(47, 141, 4) 0%, rgb(2, 198, 2) 51%, rgb(47, 141, 4) 100%);
+    background: linear-gradient(90deg, rgb(236, 237, 236) 0%, rgb(255, 255, 255) 51%, rgb(191, 192, 191) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
+
   .dark-mode .container button {
-    color: white;
-    background-color: rgb(5, 94, 5);
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border: none;
+    box-shadow: rgba(148, 148, 148, 0.35) 0px 5px 15px;
 }
 
 .dark-mode .container button:hover {
-    background-color: rgb(18, 172, 18);
+    background-color: rgb(135, 135, 135);
     color: black;
+    cursor: pointer;
 }
 
   .dark-mode .recipe-card a {
-    background: rgb(2, 91, 2);
-    color: white;
+    background: rgb(199, 199, 199);
+    color: rgb(9, 9, 9);
 }
 
     .dark-mode .recipe-card a:hover {
-        background: rgb(114, 230, 114);
-        color: black;
+        background: rgb(41, 41, 41);
+        color: rgb(255, 255, 255);
     }
   
   .dark-mode .recipe-card {
-    background:rgb(18, 172, 18);
+    background:rgba(255, 255, 255, 0.6);
     color: white;
   }
   
@@ -249,14 +265,61 @@ body {
   }
   
   .dark-mode .container input {
-    background-color: rgb(18, 172, 18);
+    background-color: rgba(222, 222, 222, 0.7);
     color: black;
+    box-shadow: rgba(148, 148, 148, 0.35) 0px 5px 15px;
   }
   
   .dark-mode .container input::placeholder {
     color: black;
   }
 
+
+
+.loader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 0;
+}
+
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-top: 4px solid #000000;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+.loader p {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    color: #000000;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
+.hidden {
+    display: none;
+}
+
+
+.dark-mode .spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #ffffff;
+}
+
+.dark-mode .loader p {
+    color: #ececec;
+}
 
 
 
